chore: add config files, add restart policy, make port 17701 same as testnet

--- a/docker-compose.bitcoin.yml
+++ b/docker-compose.bitcoin.yml
@@ -2,6 +2,7 @@ version: "3.8"
 services:
   bitcoin-core:
     container_name: bitcoind-mainnet
+    restart: unless-stopped
     volumes:
       - bitcoin_mainnet:/home/bitcoin/.bitcoin
     expose:
@@ -13,6 +14,7 @@ services:
 
   core-lightning:
     container_name: lightningd-mainnet
+    restart: unless-stopped
     volumes:
       - lightning_mainnet:/home/lightning/.lightning
     command:
@@ -24,13 +26,14 @@ services:
       - 19846
     ports:
       - 19846:19846
-      - 7701:7701
+      - 17701:7701
     environment:
       - VLS_NETWORK=mainnet
       - BITCOIND_RPC_URL=http://rpcuser:VLSsigner1@bitcoind:8332
 
   txoo:
     container_name: txood-mainnet
+    restart: unless-stopped
     command:
       - --no-checkpoint
     volumes:
@@ -42,6 +45,7 @@ services:
 
   txoo-server:
     container_name: txoo-server-mainnet
+    restart: unless-stopped
     volumes:
       - type: volume
         source: txoo_mainnet
@@ -51,6 +55,7 @@ services:
 
   vls:
     container_name: vlsd-mainnet
+    restart: unless-stopped
     volumes:
       - vls_mainnet:/home/vls/.lightning-signer
     environment:
@@ -59,6 +64,7 @@ services:
 
   lss:
     container_name: lss-mainnet
+    restart: unless-stopped
     volumes:
       - lss_mainnet:/home/lss/.lss
 
